refactored tailwind to app.css, fixed alignment issues, added description of testing the brackets to the readme

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,12 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
+
+@layer components {
+  .button-grey-blue {
+    @apply min-h-[4rem] rounded-lg bg-gray-700 font-mono text-3xl hover:bg-gray-600 text-blue-400
+  }
+  .button-grey-purple {
+    @apply min-h-[4rem] rounded-lg bg-gray-700 font-mono text-3xl hover:bg-gray-600 text-purple-800
+  }
+} 
